--- a/css/style.css
+++ b/css/style.css
@@ -71,21 +71,18 @@ nav a:hover{
 
 
 .body{
-    width: 100%;
-
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .body h1{
-    margin-top: 5%;
-    margin-left: 1%;
     color: rgb(0, 0, 0);
     letter-spacing: 1px;
     padding: 0px;
 }
 
 .body p{
-    margin-left: 15%;
-    margin-right: 5%;
     color: rgb(0, 0, 0);
     letter-spacing: 1px;
     padding: 0%;
@@ -93,11 +90,9 @@ nav a:hover{
 }
 
 .body h2{
-    margin-top: 100px;
-    margin-left: 15%;
     color: rgb(0, 0, 0);
     letter-spacing: 1px;
-    /*padding: 20px;*/
+    margin-top: 20px;
     /*background-color: rgb(152, 158, 162);*/
 }
 
@@ -109,9 +104,9 @@ nav a:hover{
     /*background-color: rgb(152, 158, 162);*/
 }
 
-.body img{
+/* .body img{
     width: 800px;
-}
+} */
 
 .body video{
     width: 800px;
@@ -157,4 +152,22 @@ nav a:hover{
   }
 
 
-  .mySlides {display:none;}
+/* PHOTO GRID */
+  /* Create two equal columns that floats next to each other */
+  .column {
+    float:left;
+    width: 50%;
+    padding: 5px;
+  }
+  
+  .column img {
+    margin-top: 12px;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+ 
